Fix annotation for Gtk.TreeView.enable_model_drag_source

https://bugzilla.gnome.org/show_bug.cgi?id=649979